erDiagram
    RAW_DATA ||--o{ DATA_TASK_REL : has_tasks
    ASSET_DATA ||--o{ DATA_TASK_REL : has_tasks
    RAW_DATA ||--o{ ASSET_RAW_LINK : sources
    ASSET_DATA ||--o{ ASSET_RAW_LINK : composed_from
    RAW_DATA ||--o{ ES_SYNC_OUTBOX : syncs
    ASSET_DATA ||--o{ ES_SYNC_OUTBOX : syncs

    RAW_DATA {
        bigint id PK
        char uuid UK
        varchar storage_path UK
        varchar status
    }

    ASSET_DATA {
        bigint id PK
        char uuid UK
        varchar storage_path UK
        varchar status
    }

    DATA_TASK_REL {
        bigint id PK
        varchar entity_type
        bigint entity_id
        varchar task_code
        varchar status
    }

    ASSET_RAW_LINK {
        bigint asset_id FK
        bigint raw_id FK
    }

    ES_SYNC_OUTBOX {
        bigint id PK
        varchar storage_path
    }
